--- a/pyproject.toml
+++ b/pyproject.toml
@@ -66,6 +66,9 @@ sphinxcontrib-napoleon = "*"
 requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
 
+[tool.poetry.scripts]
+w2fm = "webhook_to_fedora_messaging.main:main"
+
 [tool.black]
 line-length = 100
 
