--- a/pyproject.toml
+++ b/pyproject.toml
@@ -57,6 +57,7 @@ pyyaml = "^6.0.2"
 backoff = "^2.2.1"
 httpx-gssapi = "^0.3.1"
 cashews = "^7.2.0"
+greenlet = "^3.1.1"
 
 
 [tool.poetry.group.dev.dependencies]
