--- a/pyproject.toml
+++ b/pyproject.toml
@@ -80,6 +80,7 @@ types-pyyaml = "^6.0.12.20250516"
 pyright = "^1.1.402"
 types-authlib = "^1.5.0.20250608"
 sphinx-autodoc-typehints = "^3.2.0"
+oidc-register = "^0.2.1"
 
 
 [tool.poetry.group.scripts.dependencies]
