--- a/frontend/package.json
+++ b/frontend/package.json
@@ -23,6 +23,7 @@
     "@mdi/js": "^7.4.47",
     "@mdi/react": "^1.6.1",
     "@reduxjs/toolkit": "^2.8.2",
+    "@types/crypto-js": "^4.2.2",
     "bootstrap": "^5.3.7",
     "crypto-js": "^4.2.0",
     "oidc-client": "^1.11.5",
@@ -31,12 +32,13 @@
     "react-dom": "^19.1.0",
     "react-markdown": "^10.1.0",
     "react-redux": "^9.2.0",
-    "react-router": "^7.6.3"
+    "react-router": "^7.6.3",
+    "typescript": "^5.9.3"
   },
   "devDependencies": {
     "@eslint/js": "^9.29.0",
-    "@types/react": "^19.1.8",
-    "@types/react-dom": "^19.1.6",
+    "@types/react": "^19.2.2",
+    "@types/react-dom": "^19.2.1",
     "@vitejs/plugin-react": "^4.5.2 || ^5.0.0",
     "eslint": "^9.29.0",
     "eslint-plugin-react": "^7.37.5",
