--- a/frontend/package.json
+++ b/frontend/package.json
@@ -26,7 +26,7 @@
     "@types/crypto-js": "^4.2.2",
     "bootstrap": "^5.3.7",
     "crypto-js": "^4.2.0",
-    "oidc-client": "^1.11.5",
+    "oidc-client-ts": "^3.3.0",
     "react": "^19.1.0",
     "react-bootstrap": "^2.10.10",
     "react-dom": "^19.1.0",
